SERVER-16688 Shutdown should wait for the durability thread to complete